--- a/src/global.less
+++ b/src/global.less
@@ -10,6 +10,33 @@ body,
   background-color: #E9EBEE;
 }
 
+.ant-dropdown .ant-dropdown-menu .ant-dropdown-menu-item:hover {
+  background-color: #E9EBEE;
+}
+
+.ant-dropdown .ant-dropdown-menu .ant-dropdown-menu-item {
+  font-weight: 500;
+}
+
+.ant-dropdown .ant-dropdown-menu .ant-dropdown-menu-item-icon {
+  font-size: 18px;
+}
+
+.ant-dropdown .ant-dropdown-menu .ant-dropdown-menu-item-divider {
+  height: 2px;
+}
+
+.no-hover:hover {
+  background-color: transparent !important;
+  color: inherit !important;
+  cursor: default !important;
+}
+
+.message-list-container {
+  max-width: 800px !important;
+  margin: 0 auto !important;
+  overflow-x: hidden;
+}
 //.colorWeak {
 //  filter: invert(80%);
 //}
